--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,6 +10,7 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^$|^en$ index.zf2.php
 RewriteRule ^application(.*)$ index.zf2.php 
+RewriteRule ^(de|en)/blog|beitrag|kategorie|nutzer(.*)$ index.zf2.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule .* /index.zf1.php
 
